fixed issue where clicking on the submit button while fields were empty was submitting empty books and not showing the invalid prompt

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,10 @@ input {
     padding:0 10px;
 }
 
+input:focus {
+    border: 1.5px solid rgb(44, 100, 231);
+}
+
 #submit-book-btn {
     margin-top:20px;
 }
